--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,7 @@ form button:hover {
     width: 250px;
     background-color: rgba(65, 64, 64, 0.884);
     box-shadow: none;
+    z-index: 2;
 
     transform: translateX(100%);
     transition: transform 0.8s, box-shadow 0.8s;
@@ -461,6 +462,7 @@ form button:hover {
     background-color: rgba(29, 29, 29, 0.753);
     visibility: hidden;
     cursor: pointer;
+    z-index: 1;
   }
   body.menu-open .main-nav {
     box-shadow: -11px 1px 10px -4px #1d1d1d;
